examples/weight/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "www.test.com"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: my-ws
          subset: version-v1
          port:
            number: 8080
        weight: 10
      - destination:
          host: my-ws
          subset: version-v2
          port:
            number: 8080
        weight: 90
